--- a/app/views/tracks/edit.html.haml
+++ b/app/views/tracks/edit.html.haml
@@ -1,25 +1,26 @@
-- track = @track_data.track
-- provide :title, title(track)
+- provide :title, title(@track)
 
 .track-edit-data
 
   .container.top-buffer
-    = form_for track, remote: true, html: {class:  'form-horizontal', role: 'form', id: 'track_edit_form'} do |f|
+    = form_for @track, remote: true, html: {class:  'form-horizontal', role: 'form', id: 'track_edit_form'} do |f|
       .content-block
-        = link_to track_path(track) do
+        = link_to track_path(@track) do
           %i.fa.fa-chevron-left
           = t('.back')
-        .row
-          .col-sm-12#heights-chart
+        .row{'data-controller': 'jump-range', 'data-track-id': @track.id}
+          .col-sm-12{'data-target': 'jump-range.chart'}
           .col-sm-12
-            = link_to track_jump_range_path(track.id), remote: true, class: 'track-edit__refresh-range' do
+            = link_to track_jump_range_path(@track.id), remote: true, class: 'track-edit__refresh-range' do
               %i.fa.fa-refresh
 
             .time-selector
-              %input#time-selector{type: 'text', name: 'time-selector' , value: ''}
+              = f.text_field :jump_range,
+                'data-max-value': @track.duration,
+                'data-controller': 'jump-range-select',
+                'data-action': 'change->jump-range#on_change_range',
+                'data-target': 'jump-range.select'
         %hr
-        = f.hidden_field 'ff_start', id: 'ff_start'
-        = f.hidden_field 'ff_end', id: 'ff_end'
 
         - if current_user && current_user.has_role?(:admin)
           .form-group
@@ -86,11 +87,11 @@
           %span.col-sm-3.control-label
             = t('static_pages.index.track_form.kind')
           .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-            %label.btn.btn-default{class: ('active' if track.skydive?)}
+            %label.btn.btn-default{class: ('active' if @track.skydive?)}
               = f.radio_button 'kind', 'skydive'
               = 'Skydive'
 
-            %label.btn.btn-default{class: ('active' if track.base?)}
+            %label.btn.btn-default{class: ('active' if @track.base?)}
               = f.radio_button 'kind', 'base'
               = 'B.A.S.E'
 
@@ -99,13 +100,13 @@
             %span.col-sm-3.control-label
               = t('tracks.edit.visibility')
             .btn-group.col-sm-9{data: {toggle: 'buttons'}}
-              %label.btn.btn-default{ class:  ('active' if track.public_track?) }
+              %label.btn.btn-default{ class:  ('active' if @track.public_track?) }
                 = f.radio_button 'visibility', 'public_track'
                 = t('visibility.public')
-              %label.btn.btn-default{ class:  ('active' if track.unlisted_track?) }
+              %label.btn.btn-default{ class:  ('active' if @track.unlisted_track?) }
                 = f.radio_button 'visibility', 'unlisted_track'
                 = t('visibility.unlisted')
-              %label.btn.btn-default{ class:  ('active' if track.private_track?) }
+              %label.btn.btn-default{ class:  ('active' if @track.private_track?) }
                 = f.radio_button 'visibility', 'private_track'
                 = t('visibility.private')
         
@@ -138,21 +139,16 @@
           .col-sm-12
             .pull-right
               = f.submit t('general.save'), class: 'btn btn-success'
-              = link_to t('general.cancel'), track, class: 'btn btn-default'
+              = link_to t('general.cancel'), @track, class: 'btn btn-default'
             .btn.btn-default
               = link_to t('general.delete'),
-                          track,
+                          @track,
                           method: :delete,
                           data: {confirm: t('tracks.show.delete_confirmation')},
                           class: 'text-danger'
 
 - content_for :page_js do
   :javascript
-    // Tear down
-    $(document).one('turbolinks:before-cache', function() {
-      $('#time-selector').ionRangeSlider('remove');
-    });
-
     $('#track_edit_form').validate({
       ignore: 'input[type=hidden]',
       rules: {
@@ -200,61 +196,8 @@
       }
     });
 
-    $('#heights-chart').highcharts({
-      chart: {
-        type: 'area'
-      },
-      title: {
-        text: "#{I18n.t('tracks.edit.elev_chart')}"
-      },
-      plotOptions: {
-        series: {
-          marker: {
-            radius: 1
-          }
-        }
-      },
-      yAxis: {
-        title: {
-          text: "#{I18n.t('tracks.edit.elevation')}, #{I18n.t('units.m')}"
-        }
-      },
-      xAxis: {
-        plotBands: [
-          {
-            color: 'gray',
-            from: 0,
-            to: 0,
-            id: 'plotband-start'
-          },
-          {
-            color: 'gray',
-            from: 0,
-            to: 0,
-            id: 'plotband-end'
-          },
-        ]},
-        tooltip: {
-          crosshairs: true
-        },
-        credits: {
-          enabled: false
-        },
-        series: [
-          {
-            name: "#{I18n.t('tracks.edit.elevation')}",
-            pointInterval: 10,
-            tooltip: {
-              valueSuffix: "#{I18n.t('units.m')}"
-            },
-            data: JSON.parse("#{@track_data.points.to_json}")
-          }
-        ]
-      });
-
     var view = new Skyderby.views.TrackEditView({
-      el: '.track-edit-data',
-      max_rel_time: #{@track_data.duration}
+      el: '.track-edit-data'
     });
     view.render();
 
