show/hide designated lane tool

--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -25,6 +25,10 @@
     overflow-y: scroll;	
   }
 
+  .round-competitors__list-commands {
+    padding: 7px 0;
+  }
+
   table.round-competitors {
 
     tr.disabled {
