extracted designated lane to its own controller

--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -1,33 +1,32 @@
 .container-fluid.round-map{'data-controller': 'events--round-map', 'data-url': url_for}
   .row
-    .col-sm-8
-      - if policy(@event).update?
-        .designated-lane-form
-          %button.btn.btn-xs.btn-default{'data-action': 'click->events--round-map#toggle_designated_lane'}
-            Designated lane
-          %form.form-inline
-            .form-group
-              %label.control-label{for: 'designated-lane-length'} Length
-              %input#designated-lane-length.form-control.input-sm{type: :number,
-                                                                  value: 7000,
-                                                                  disabled: true,
-                                                                  'data-target': 'events--round-map.designated_lane_length',
-                                                                  'data-action': 'input->events--round-map#on_change_designated_lane_length'}
-            .form-group
-              %label.control-label{for: 'designated-lane-width'} Width
-              %input#designated-lane-width.form-control.input-sm{type: :number,
-                                                                 value: 1200,
-                                                                 disabled: true,
-                                                                 'data-target': 'events--round-map.designated_lane_width',
-                                                                 'data-action': 'input->events--round-map#on_change_designated_lane_width'}
-            .form-group
-              %label.control-label{for: 'designated-lane-direction'} Direction
-              %input#designated-lane-direction.form-control.input-sm{type: :number,
-                                                                     value: 0,
-                                                                     disabled: true,
-                                                                     'data-target': 'events--round-map.designated_lane_direction',
-                                                                     'data-action': 'input->events--round-map#on_change_designated_lane_direction'}
-      #round-map{'data-target': 'events--round-map.map'}
+    .col-sm-8{'data-controller': 'events--designated-lane'}
+      .designated-lane-form
+        %button.btn.btn-xs.btn-default{'data-action': 'click->events--designated-lane#toggle'}
+          Designated lane
+        %form.form-inline
+          .form-group
+            %label.control-label{for: 'designated-lane-length'} Length
+            %input#designated-lane-length.form-control.input-sm{type: :number,
+                                                                value: 7000,
+                                                                disabled: true,
+                                                                'data-target': 'events--designated-lane.length',
+                                                                'data-action': 'input->events--designated-lane#on_change_length'}
+          .form-group
+            %label.control-label{for: 'designated-lane-width'} Width
+            %input#designated-lane-width.form-control.input-sm{type: :number,
+                                                               value: 1200,
+                                                               disabled: true,
+                                                               'data-target': 'events--designated-lane.width',
+                                                               'data-action': 'input->events--designated-lane#on_change_width'}
+          .form-group
+            %label.control-label{for: 'designated-lane-direction'} Direction
+            %input#designated-lane-direction.form-control.input-sm{type: :number,
+                                                                   value: 0,
+                                                                   disabled: true,
+                                                                   'data-target': 'events--designated-lane.direction',
+                                                                   'data-action': 'input->events--designated-lane#on_change_direction'}
+      #round-map{'data-target': 'events--round-map.map events--designated-lane.map'}
         .round-map-loading
           %i.fa.fa-3x.fa-circle-o-notch.fa-spin
           %p
