on fail map loading

--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -27,7 +27,7 @@
                                                                    'data-target': 'events--designated-lane.direction',
                                                                    'data-action': 'input->events--designated-lane#on_change_direction'}
       #round-map{'data-target': 'events--round-map.map events--designated-lane.map'}
-        .round-map-loading
+        .round-map-loading{'data-target': 'events--round-map.loading_placeholder'}
           %i.fa.fa-3x.fa-circle-o-notch.fa-spin
           %p
             Loading... 
