--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -6,6 +6,7 @@
     height: 90vh;
     min-height: 100%;
     width: 100%;
+    position: relative;
   }
 
   .round-map-loading {
@@ -15,8 +16,8 @@
       position: absolute;
       z-index: 1142;
       text-align: center;
-      margin-left: -30px;
-      margin-top: -15px;
+      top: 0;
+      bottom: 0;
       padding-top: 200px;
   }
   
