added 5 seconds after exit point to map

--- a/app/assets/stylesheets/events/rounds/_map.scss
+++ b/app/assets/stylesheets/events/rounds/_map.scss
@@ -82,6 +82,10 @@ table.round-competitors td.round-competitors__check {
   font-size: 10px;
 }
 
+.round-map--after-exit-color {
+  color: #124E78;
+}
+
 .round-map--start-window-color {
   color: #fc235e;
 }
