--- a/app/views/events/rounds/maps/_round_map.html.haml
+++ b/app/views/events/rounds/maps/_round_map.html.haml
@@ -30,16 +30,23 @@
         .round-map-loading{'data-target': 'events--round-map.loading_placeholder'}
           %i.fa.fa-3x.fa-circle-o-notch.fa-spin
           %p
-            Loading... 
+            Loading...
       .round-map__legend
+        .round-map__legend-item
+          %i.fa.fa-circle.round-map--after-exit-color
+          &mdash;
+          = t('events.rounds.map.after_exit_description')
+
         .round-map__legend-item
           %i.fa.fa-circle.round-map--start-window-color
           &mdash;
           = t('events.rounds.map.start_window_description', altitude: @event.range_from)
+
         .round-map__legend-item
           %i.fa.fa-circle.round-map--end-window-color
           &mdash;
           = t('events.rounds.map.end_window_description', altitude: @event.range_to)
+
     .col-sm-4.round-competitors-wrap
       .round-competitors__list-commands
         %button.btn.btn-xs.btn-default{'data-action': 'click->events--round-map#select_all'}
